# libunistd

./: .gitignore  CMakeLists.txt  CodingStyle.md  Contributors.md  Doxyfile  LICENSE  README.md  VERSION.txt  dirent.cpp  dirent.h  dirent.h.fltk  dlfcn.h  endian.h  fix_vcast.h  fstream.h  ifaddrs.h  libgen.h  libintl.h  libportable-config.cmake  libportable.sh  libunistd-config.cmake  libunistd.pro  mqueue.h  netdb.h  poll.h  pthread.h  pwd.h  rtc.h  semaphore.h  strings.h  stub.h  termios.h  uni_signal.h  unistd.h  use-libunistd.cmake
arpa/: inet.h
bash/: debian_upgrade.sh
cmaker/: README.md  cmaker_all.sh  cmaker_c_to_cpp.sh  cmaker_class.sh  cmaker_class.sh.cpp  cmaker_class.sh.h  cmaker_class.sh.test.cpp  cmaker_class_remove.sh  cmaker_cmakelist.sh  cmaker_dll.sh  cmaker_dll.sh.main.cpp  (+16 more)
libuuid/: CMakeLists.txt  Version-libuuid-1.0.3.txt  all-io.h  c.h  gen_uuid.cpp  parse.cpp  randutils.cpp  unparse.cpp  uuid_time.cpp
libuuid/test/: CMakeLists.txt  test_uuid.c
lmdb/: .gitignore  CMakeLists.txt  Cursor.cpp  Cursor.h  Datum.h  Db.cpp  Db.h  Field.h  Item.h  LightningDb.cpp  LightningDb.h  Lmdb.h  LmdbError.cpp  LmdbError.h  Transaction.cpp  Transaction.h
lmdb/docs/: BugReportOpenLDAP.txt
lmdb/liblmdb/: VERSION-openldap-repo-latest.txt  lmdb.h  mdb.c  mdb_load.c  mdb_stat.c  mtest.c  mtest2.c  mtest3.c  mtest5.c  mtest6.c
lmdb/source/: lmdb.h  mdb.c  midl.c
lmdb/test/: CMakeLists.txt  mdb_dump.c  mdb_load.c  mdb_stat.c  mtest.c  mtest2.c  mtest3.c  mtest4.c  mtest5.c  mtest6.c
portable/: App.h  Astring.h  AtomicCounter.h  AtomicLock.h  AtomicLock0.h  AtomicMutex.h  BSdPacketServer.h  Breakpoint.h  BsdMulticast.h  BsdPacketServer.cpp  BsdSocket.cpp  BsdSocket.h  BsdSocketClient.cpp  BsdSocketClient.h  BsdSocketPool.cpp  BsdSocketPool.h  BsdSocketServer.cpp  BsdSocketServer.h  BsdSocketTcp.h  BsdSocketUdp.h  Buffer.h  CMakeLists.txt  Cfile.h  CommandLine.cpp  CommandLine.h  Counter.h  CppTypes.h  Db.h  FieldMap.h  Finder.h  FirstError.cpp  FirstError.h  FixedQueue.h  Folder.h  Hash.h  HtmlPage.h  Http.cpp  Http.h  HttpDecoder.h  Logger.h  (+62 more)
portable/http/: Http.cpp  Http.h
portable/ipc/: BsdMulticast.h  BsdPacketServer.cpp  BsdPacketServer.h  BsdSocket.cpp  BsdSocket.h  BsdSocketClient.cpp  BsdSocketClient.h  BsdSocketPool.cpp  BsdSocketPool.h  BsdSocketServer.cpp  BsdSocketServer.h  BsdSocketStartup.cpp  BsdSocketStartup.h  BsdSocketUdp.h  Packet.h  PacketQueue.h  PacketReader.cpp  PacketReader.h  PacketSizer.h  PacketSocket.cpp  PacketSocket.h  PacketStats.h  PacketWriter.h  PosixQueue.h  UdpPump.h
portable/pump/: Pump.cpp  Pump.h  TimerPump.cpp  TimerPump.h
portable/time/: Timecode.h  Timespan.h  Timestamp.cpp  Timestamp.h  VariableClock.h
qdecoder/src/: CMakeLists.txt  Makefile.in  doxygen.conf  doxygen_header.html  internal.cpp  internal.h  qcgireq.cpp  qcgires.cpp  qcgisess.cpp  qdecoder.h  qdecoder.pc.in  qentry.cpp
sqlite/: CMakeLists.txt  Db.h  SqlStatement.cpp  SqlStatement.h  Sqlite.h  Statement.h  VERSION-sqlite-amalgamation-3081101.txt
sqlite/libsqliteQt/: Makefile  Makefile.Debug  Makefile.Release  libsqliteQt.pro
sqlite/source/: VERSION-2018-11-11.txt  VERSION_3.25.3.txt
sqlite/vcpp/: ReadMe.txt  libsqlite.vcxproj  libsqlite.vcxproj.filters
test/: CMakeLists.txt  CmakeLists.txt
test/PosixQueue/: CmakeLists.txt  PosixQueue.sln
test/PosixQueue/PosixQueue/: PosixQueue.vcxproj
test/PosixQueue/mq_receive/: main.cpp  mq_receive.cpp  mq_receive.vcxproj  mq_receive.vcxproj.filters
test/PosixQueue/mq_send/: mq_send.cpp  mq_send.vcxproj  mq_send.vcxproj.filters
test/UnitTest/: CmakeLists.txt  UnitTest.sln
test/UnitTest/UnitTest/: UnitTest.vcxproj  main.cpp
test/WormFile/: CmakeLists.txt  main.cpp
test/lmdb/: lock.mdb  sample-mdb.c  test-lmdb.cpp
test/mman/: CmakeLists.txt  mman_client.cpp  mman_server.cpp
test/scandir/: CMakeLists.txt  main.cpp
test/semaphore/: CmakeLists.txt  semaphore_client.cpp  semaphore_client2.cpp  semaphore_server.cpp  semaphore_server2.cpp
test/shm/: CmakeLists.txt  shm_server.cpp
test/sqlite/: CmakeLists.txt  main.cpp
test/tcp_server/: tcp_server.cpp
test/test_PosixQueue/: CMakeLists.txt  CmakeLists.txt
test/test_PosixQueue/mq_send/: main.cpp
test/test_Pump/: CMakeLists.txt  test_Pump.cpp
test/test_lmdb/: CMakeLists.txt  ProductData.h  data.mdb  sample-mdb.c  test-lmdb-full.cpp  test-lmdb.cpp
test/test_logger/: CMakeLists.txt  main.cpp
test/test_mman/: CMakeLists.txt  CmakeLists.txt  mman_client.cpp  mman_server.cpp
test/test_scandir/: CMakeLists.txt  opendir.cpp  scandir.cpp
test/test_semaphore/: CMakeLists.txt  CmakeLists.txt  semaphore1.cpp  semaphore_server.cpp
test/test_shm/: CMakeLists.txt  shm_client.cpp
test/test_sqlite/: CMakeLists.txt  CmakeLists.txt
test/test_unit/: CMakeLists.txt  CmakeLists.txt  main.cpp
test/test_wormfile/: CMakeLists.txt  CmakeLists.txt
unistd/: CMakeLists.txt  Int128.asm  Int128.h  cfunc.h  chrono.h  clock_gettime.cpp  clock_gettime.h  dirent.cpp  dirent.h  dlfcn.h  fnmatch.cpp  fnmatch.h  fts.c  fts.h  ftw.h  getline.cpp  getopt.cpp  getopt.h  gettimeofday.cpp  gettimeofday.h  glob.h  grp.h  iconv.h  ifaddrs.h  libgen.h  libintl.h  mem.h  mqueue.h  netdb.c  netdb.h  poll.h  pthread.cpp  pthread.h  publib.h  pwd.h  semaphore.h  sigaction.cpp  sigaction.h  sources.cmake  strings.h  (+10 more)
unistd/arpa/: inet.h  namer.h  nameser.h
unistd/bsd/: string.h
unistd/int128/: Int128.h  Int128x64.asm  Int128x86.cpp
unistd/int128/BigNumbers/: Int128.h  Int128IO.cpp  Int128Net.h  Int128Packer.cpp  Int128Str.cpp  Int128ToString.cpp  Int128x86.cpp
unistd/int128/old/: Int128.cpp  Int128.h  Uint128.cpp
unistd/linux/: limits.h  rtc.h
unistd/more/: shm_more.h
unistd/net/: ethertypes.h  if.h  if_arp.h
unistd/netinet/: icmp6.h  ip.h  ip_icmp.h  tcp.h  udp.h
unistd/sys/: epoll.h  file.cpp  file.h  inotify.h  ioctl.h  ipc.cpp  ipc.h  mman.h  param.h  poll.h  prctl.h  random.cpp  random.h  resource.h  sem.cpp  sem.h  shm.h  socket.h  statvfs.h  sys_types.h  time.h  types.h  vfs.h  wait.h
uuid/: CMakeLists.txt  c.h
uuid/test/: CMakeLists.txt
(+140 files in other folders)
